<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TempDisplay">

    <TextView
        android:id="@+id/device_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:textStyle="bold|italic"
        android:text="@string/device_mac">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">

        <CheckBox
            android:id="@+id/subscribe"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/subscribeNotifications">
        </CheckBox>

        <TextView
            android:id="@+id/battery"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="200dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold|italic"
            android:text="@string/batteryIndicator">
        </TextView>

    </LinearLayout>

    <com.jjoe64.graphview.GraphView
        android:layout_width = "match_parent"
        android:layout_height = "200dp"
        android:id = "@+id/graph">
    </com.jjoe64.graphview.GraphView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lowView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:text="@string/low_temp">
        </TextView>

        <TextView
            android:id="@+id/avgView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:textStyle="bold"
            android:text="@string/average_temp">
        </TextView>

        <TextView
            android:id="@+id/highView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:textStyle="bold"
            android:text="@string/high_temp">
        </TextView>

    </LinearLayout>

    <ScrollView
        android:id="@+id/log_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="4dp">

        <TextView
            android:id="@+id/logView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeMessage">
        </TextView>

    </ScrollView>

</LinearLayout>